--- a/githubproject/Pages/Index.cshtml
+++ b/githubproject/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to change</h1>
+    <h1 class="display-4">A change is made by Simran</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
